--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </p>
                 </div>
             </article>
-            <article class="place place__article">
+            <article class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <ul class="place__url">
                     <li class="place__url-heading">URL</li>
