--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <section class="places content__places">
             <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
-                <ul class="place__url">
-                    <li class="place__url-heading">URL</li>
+                <ul class="place__list">
+                    <li class="place__list-heading">URL</li>
                     <li><a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a></li>
                 </ul>
                 <img class="place__img" src="./images/kosa.jpg" alt="Куршская коса">
@@ -74,8 +74,8 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Кольский</h2>
-                <ul class="place__url">
-                    <li class="place__url-heading">URL</li>
+                <ul class="place__list">
+                    <li class="place__list-heading">URL</li>
                     <li><a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></li>
                 </ul>
                 <img class="place__img" src="./images/kolsky.jpg" alt="Кольский полуостров">
@@ -90,8 +90,8 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Алтай</h2>
-                <ul class="place__url">
-                    <li class="place__url-heading">URL</li>
+                <ul class="place__list">
+                    <li class="place__list-heading">URL</li>
                     <li><a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></li>
                 </ul>
                 <img class="place__img" src="./images/altai.jpg" alt="Алтай">
@@ -106,8 +106,8 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
-                <ul class="place__url">
-                    <li class="place__url-heading">URL</li>
+                <ul class="place__list">
+                    <li class="place__list-heading">URL</li>
                     <li><a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></li>
                 </ul>
                 <img class="place__img" src="./images/baikal.jpg" alt="Зимний Байкал">
@@ -122,8 +122,8 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Карелия</h2>
-                <ul class="place__url">
-                    <li class="place__url-heading">URL</li>
+                <ul class="place__list">
+                    <li class="place__list-heading">URL</li>
                     <li><a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a></li>
                 </ul>
                 <img class="place__img" src="./images/karelia.jpg" alt="Карелия">
