--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <section class="places content__places">
             <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
-                <ul class="place__list">
-                    <li class="place__list-heading">URL</li>
-                    <li><a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a></li>
-                </ul>
+                <div class="place__web">
+                    <p class="place__web-heading">URL</p>
+                    <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+                </div>
                 <img class="place__img" src="./images/kosa.jpg" alt="Куршская коса">
                 <div class="place__texts">
                     <p class="place__text">
@@ -74,10 +74,10 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Кольский</h2>
-                <ul class="place__list">
-                    <li class="place__list-heading">URL</li>
-                    <li><a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></li>
-                </ul>
+                <div class="place__web">
+                    <p class="place__web-heading">URL</p>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                </div>
                 <img class="place__img" src="./images/kolsky.jpg" alt="Кольский полуостров">
                 <div class="place__texts">
                     <p class="place__text">
@@ -90,10 +90,10 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Алтай</h2>
-                <ul class="place__list">
-                    <li class="place__list-heading">URL</li>
-                    <li><a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></li>
-                </ul>
+                <div class="place__web">
+                    <p class="place__web-heading">URL</p>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                </div>
                 <img class="place__img" src="./images/altai.jpg" alt="Алтай">
                 <div class="place__texts">
                     <p class="place__text">
@@ -106,10 +106,10 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
-                <ul class="place__list">
-                    <li class="place__list-heading">URL</li>
-                    <li><a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a></li>
-                </ul>
+                <div class="place__web">
+                    <p class="place__web-heading">URL</p>
+                    <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                </div>
                 <img class="place__img" src="./images/baikal.jpg" alt="Зимний Байкал">
                 <div class="place__texts">
                     <p class="place__text">
@@ -122,10 +122,10 @@
             </article>
             <article class="place">
                 <h2 class="place__title">Карелия</h2>
-                <ul class="place__list">
-                    <li class="place__list-heading">URL</li>
-                    <li><a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a></li>
-                </ul>
+                <div class="place__web">
+                    <p class="place__web-heading">URL</p>
+                    <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                </div>
                 <img class="place__img" src="./images/karelia.jpg" alt="Карелия">
                 <div class="place__texts">
                     <p class="place__text">
